--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "chart.js": "^2.9.4",
     "faker": "^5.1.0",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.14.1",
@@ -21,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-slick": "^0.27.13",
+    "react-wordcloud": "^1.2.7",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
