--- a/package.json
+++ b/package.json
@@ -8,27 +8,27 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
+    "web-vitals": "^0.2.4",
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.0",
     "chart.js": "^2.9.4",
-    "faker": "^5.1.0",
     "font-awesome": "^4.7.0",
-    "node-sass": "^4.14.1",
+    "faker": "^5.1.0",
+    "react-wordcloud": "^1.2.7",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-horizontal-scrolling-menu": "^0.7.8",
-    "react-icons": "^3.11.0",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-slick": "^0.27.13",
-    "react-wordcloud": "^1.2.7",
-    "slick-carousel": "^1.8.1",
-    "web-vitals": "^0.2.4"
+    "react-icons": "^3.11.0",
+    "node-sass": "^4.14.1",
+    "axios": "^0.21.0",
+    "react-router-dom": "^5.2.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
