--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "npm": "^6.14.11",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
+    "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
     "react-horizontal-scrolling-menu": "^0.7.8",
     "react-icons": "^3.11.0",
